--- a/dailyfresh/templates/df_cart/cart.html
+++ b/dailyfresh/templates/df_cart/cart.html
@@ -9,6 +9,7 @@
                           if(data.ok==1){
                               $('ul').remove('#'+cart_id);
                               total();
+                              window.location.reload();
                           }
                       });
                       }
@@ -119,13 +120,16 @@
 
         });
 
+
     });
+
 
     </script>
 {% endblock head %}
 {% block content %}
      <script src="/static/js/jquery-3.2.1.min.js"></script>
-    <form action="/order" method="get">
+    {# 使用表单提交购物车数据 #}
+
 	<div class="total_count">全部商品<em class="goods_count">{{ carts.count }}</em>件</div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
@@ -141,18 +145,18 @@
 		<li class="col01 sing"><input type="checkbox" class="one" name="sing_checkbox" checked="true"/></li>
 		<li class="col02"><img src="/static/{{ cart.goods.gpic }}"/></li>
 		<li class="col03">{{ cart.goods.gtitle }}<br><em>{{ cart.goods.gprice }}元/500g</em></li>
-		<li class="col04" name="danwei"> {{ cart.goods.gunit }}</li>
-		<li class="col05" name="price">{{ cart.goods.gprice }}</li>
-		<li class="col06" name="666">
+		<li class="col04" > {{ cart.goods.gunit }}</li>
+		<li class="col05" >{{ cart.goods.gprice }}</li>
+		<li class="col06">
 			<div class="num_add">
 				<a href="javascript:;"   class="add fl">+</a>
 				<input type="text" class="num_show fl" name="number" kucun ={{ cart.goods.gkucun }} value={{ cart.count }}>
 				<a href="javascript:;" class="minus fl">-</a>
 			</div>
 		</li>
-		<li class="col07 count"  name="yyy">{%  widthratio cart.goods.gprice 1 cart.count%} </li>
+		<li class="col07 count" >{%  widthratio cart.goods.gprice 1 cart.count%} </li>
 
-		<li class="col08" name="888"><a href="javascript:cart_del({{ cart.id }});">删除</a></li>
+		<li class="col08"><a href="javascript:cart_del({{ cart.id }});">删除</a></li>
 
     {% endfor %}
 	</ul>
@@ -160,7 +164,22 @@
 		<li class="col01"><input type="checkbox" name=""  id="checkall"  checked="true"></li>
 		<li class="col02 " >全选</li>
         <li class="col03">合计(不含运费)：<span>¥</span><em id="total"></em><br>共计<em class="goods_count">{{ carts.count }}</em>件商品</li>
-		<li class="col04"><a href="/cart/order">去结算</a></li>
+		<li class="col04"><a href="javascript:go_order();">去结算</a></li>
 	</ul>
-    </form>
+
+    <script>
+     function go_order() {
+            s = '';
+             $(":checkbox:not(#checkall)").each(function () {
+                 if($(this).prop('checked')){
+                     id = $(this).parents('.cart_list_td').attr('id');
+                     s = s + 'cart_id='+id+'&';
+                 }
+
+            });
+            //删除最后一个&
+         s = s.substring(0,s.length-1);
+         location.href='/order?'+s;
+    }
+    </script>
 {% endblock content %}
