--- a/dailyfresh/templates/df_cart/place_order.html
+++ b/dailyfresh/templates/df_cart/place_order.html
@@ -1,19 +1,40 @@
 {% extends 'base.html' %}
+{% block head %}
+
+    <script>
+    $(function () {
+        total1=0;//商品总个数
+        total2=0;//商品总金额
+        $('.col07').each(function () {
+            count = parseInt($(this).prev().text());
+            price = parseFloat($(this).prev().prev(),children('span').text());
+            total = count*price;
+            $(this).text(total.toFixed(2)+'元');
+            total1++;
+            total2+=total1;
+        });
+        $("#total1").text(total1);
+        $("#total2").text(total2.toFixed(2));
+        $("#total3").text((total2+10).toFixed(2));
+        $("#total4").val((total2+10).toFixed(2));
+    })
+    </script>
+{% endblock head %}
 {% block content %}
 <body>
-	
+
 	<h3 class="common_title">确认收货地址</h3>
 
 	<div class="common_list_con clearfix">
 		<dl>
 			<dt>寄送到：</dt>
-			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
+            <dd><input type="radio" name="" checked="">{{ user.uaddress  }}   <em style="color: red;margin-left: 20px">{{ user.ushow }}</em>   <em style="color: cyan;size: 30px;margin-left: 20px">{{ user.uphone }}</em>     (收)</dd>
 		</dl>
-		<a href="user_center_site.html" class="edit_site">编辑收货地址</a>
+		<a href="/user/site/" class="edit_site">编辑收货地址</a>
 
 	</div>
-	
-	<h3 class="common_title">支付方式</h3>	
+
+	<h3 class="common_title">支付方式</h3>
 	<div class="common_list_con clearfix">
 		<div class="pay_style_con clearfix">
 			<input type="radio" name="pay_style" checked>
@@ -28,33 +49,27 @@
 	</div>
 
 	<h3 class="common_title">商品列表</h3>
-	
+
 	<div class="common_list_con clearfix">
 		<ul class="goods_list_th clearfix">
 			<li class="col01">商品名称</li>
 			<li class="col02">商品单位</li>
 			<li class="col03">商品价格</li>
 			<li class="col04">数量</li>
-			<li class="col05">小计</li>		
+			<li class="col05">小计</li>
 		</ul>
+        {% for cart in carts %}
 		<ul class="goods_list_td clearfix">
-			<li class="col01">1</li>			
-			<li class="col02"><img src="images/goods/goods012.jpg"></li>
-			<li class="col03">奇异果</li>
-			<li class="col04">500g</li>
-			<li class="col05">25.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">25.80元</li>	
+			<li class="col01">{{ cart.id }}</li>
+			<li class="col02"><img src="/static/{{ cart.goods.gpic }}"></li>
+			<li class="col03">{{ cart.goods.gtitle }}</li>
+			<li class="col04">{{ cart.goods.gunit }}</li>
+			<li class="col05">{{ cart.goods.gprice }}元</li>
+			<li class="col06">{{ cart.count }}</li>
+			<li class="col07">{% widthratio cart.count 1 cart.goods.gprice %}</li>
 		</ul>
-		<ul class="goods_list_td clearfix">
-			<li class="col01">2</li>			
-			<li class="col02"><img src="images/goods/goods003.jpg"></li>
-			<li class="col03">大兴大棚草莓</li>
-			<li class="col04">500g</li>
-			<li class="col05">16.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">16.80元</li>	
-		</ul>
+        {% endfor %}
+
 	</div>
 
 	<h3 class="common_title">总金额结算</h3>
@@ -69,7 +84,7 @@
 
 	<div class="order_submit clearfix">
 		<a href="javascript:;" id="order_btn">提交订单</a>
-	</div>	
+	</div>
 
 
 
@@ -77,7 +92,7 @@
 		<div class="popup">
 			<p>订单提交成功！</p>
 		</div>
-		
+
 		<div class="mask"></div>
 	</div>
 	<script type="text/javascript" src="js/jquery-1.12.2.js"></script>
@@ -90,9 +105,9 @@
 				setTimeout(function(){
 					$('.popup_con').fadeOut('fast',function(){
 						window.location.href = 'index.html';
-					});	
+					});
 				},3000)
-				
+
 			});
 		});
 	</script>
