--- a/dailyfresh/templates/df_goods/list.html
+++ b/dailyfresh/templates/df_goods/list.html
@@ -64,8 +64,8 @@
 					<h4><a href="{{ g.id }}">{{ g.gtitle }}</a></h4>
 					<div class="operate">
 						<span class="prize">￥{{ g.gprice }}</span>
-						<span class="unit">1{{ g.gunit }}</span>
-						<a href="/cart/add{{ g.id }}_1/" class="add_goods" title="加入购物车"></a>
+						<span class="unit">{{ g.gunit }}</span>
+						<a href="/cart/add_{{ g.id }}_1/" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
                 {% endfor %}
